--- a/README.rdoc
+++ b/README.rdoc
@@ -68,7 +68,7 @@ comparing it to your tests.
 
 == Generating Test Skeletons
 
-NOTE: This feature is not yet implemented!
+NOTE: This feature is not yet fully implemented!
 
 Because of the one to one correspondance of case-unit to class-method, Lemon can
 also generate test scaffolding for previously written code. To do this, use the
@@ -89,7 +89,20 @@ applications.
 
 == COPYRIGHT
 
-(GPL License)
+(LGPL License)
 
 Copyright (c) 2009 Thomas Sawyer
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the Lesser General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+Lesser General Public License for more details.
+
+You should have received a copy of the Lesser General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
 
