add uncovered and undefined to all reporters

--- a/README.rdoc
+++ b/README.rdoc
@@ -63,7 +63,7 @@ or <tt>-v</tt> option.
 Lemon can check test coverage by loading your target system and 
 comparing it to your tests.
 
-  $ lemon --coverage -Ilib -rmyapp test/cases/
+  $ lemon --coverage -Ilib test/cases/
 
 
 == Generating Test Skeletons
@@ -76,7 +76,7 @@ also generate test scaffolding for previously written code. To do this, use the
 scripts for which to generate test scaffolding, and the output location for
 the test scripts.
 
-  $ lemon --generate -rlib/ test/cases/
+  $ lemon --generate -Ilib test/cases/
 
 Generating test case scaffodling from code will undoubtedly strike test-driven developers
 as a case of putting the cart before the horse. However, it is not unreasonable to argue
