--- a/README.rdoc
+++ b/README.rdoc
@@ -20,6 +20,8 @@ of unit tests -- the individual methods.
 
 == HOW TO USE
 
+=== Writing Tests
+
 Say our library 'mylib.rb' consists of the class X:
 
   class X
@@ -44,9 +46,10 @@ are run. This allows Lemon to cacluate accurate coverage reports.
 As tests grow, we might need to organize them into special concerns.
 For this Lemon provides the #Concern method.
 
+  Covers 'mylib'
+
   TestCase X do
-    Concern "Description of a concern that the following unit",
-            "tests address."
+    Concern "Description of a concern that the following unit tests address."
 
     Unit :a => "method #a does something expected" do
       x = X.new
@@ -54,25 +57,25 @@ For this Lemon provides the #Concern method.
     end
   end
 
+=== Running Tests
+
 To run tests use the +lemon+ command-line utility.
 
   $ lemon test/cases/name_case.rb
 
-Normal output is typical <i>dot-progress</i>. For verbose output, use the <tt>--verbose</tt>
-or <tt>-v</tt> option.
+Normal output is typical <i>dot-progress</i>. For verbose output, use
+the <tt>--verbose</tt> or <tt>-v</tt> option.
 
   $ lemon -v test/cases/name_case.rb
 
-
-== Checking Test Coverage
+=== Checking Test Coverage
 
 Lemon can check test coverage by loading your target system and 
 comparing it to your tests.
 
   $ lemon --coverage -Ilib test/cases/
 
-
-== Generating Test Skeletons
+=== Generating Test Skeletons
 
 Because of the one to one correspondance of case-unit to class-method, Lemon can
 also generate test scaffolding for previously written code. To do this, use the
