--- a/README.rdoc
+++ b/README.rdoc
@@ -21,7 +21,7 @@ Say our library 'mylib.rb' consists of the class X:
     def a; "a"; end
   end
 
-The simplist test case would be written as follows:
+The simplest test case would be written as follows:
 
   Covers 'mylib'
 
@@ -32,7 +32,7 @@ The simplist test case would be written as follows:
     end
   end
 
-The +Covers+ method works just like +require+ with the exception that loading the file does not occur until just before the tests are run. This allows Lemon to cacluate accurate coverage reports.
+The +Covers+ method works just like +require+ with the exception that loading the file does not occur until just before the tests are run. This allows Lemon to calculate accurate coverage reports.
 
 As tests grow, we might need to organize them into special concerns. For this Lemon provides the #Concern method.
 
@@ -59,17 +59,17 @@ Normal output is typical <i>dot-progress</i>. For verbose output, use the <code>
 
 === Checking Test Coverage
 
-Lemon can check test coverage by loading your target system and comparing it to your tests. To do this suppy the <code>lemon</code> command the <code>--coverage</code> or <code>-c</code> option.
+Lemon can check test coverage by loading your target system and comparing it to your tests. To do this supply the <code>lemon</code> command the <code>--coverage</code> or <code>-c</code> option.
 
   $ lemon --coverage -Ilib test/cases/
 
 === Generating Test Skeletons
 
-Because of the one to one correspondance of case-unit to class-method, Lemon can also generate test scaffolding for previously written code. To do this, use the <code>--generate</code> or <code>-g</code> option and provide the lib location, or files, of the scripts for which to generate test scaffolding, and the output location for the test scripts.
+Because of the one to one correspondence of case-unit to class-method, Lemon can also generate test scaffolding for previously written code. To do this, use the <code>--generate</code> or <code>-g</code> option and provide the lib location, or files, of the scripts for which to generate test scaffolding, and the output location for the test scripts.
 
   $ lemon --generate -Ilib test/cases/
 
-Generating test case scaffodling from code will undoubtedly strike test-driven developers as a case of putting the cart before the horse. However, it is not unreasonable to argue that high-level, behavior-driven, functional testing frameworks, such as Q.E.D. and Cucumber are better suited to test-first methodologies. While test-driven development can obviously be done with Lemon, unit-testing is more appropriate for testing specific, critical protions of code, or for achieving full test coverage for mission critical applications.
+Generating test case scaffolding from code will undoubtedly strike test-driven developers as a case of putting the cart before the horse. However, it is not unreasonable to argue that high-level, behavior-driven, functional testing frameworks, such as Q.E.D. and Cucumber are better suited to test-first methodologies. While test-driven development can obviously be done with Lemon, unit-testing is more appropriate for testing specific, critical portions of code, or for achieving full test coverage for mission critical applications.
 
 
 == COPYRIGHT
