--- a/README.rdoc
+++ b/README.rdoc
@@ -23,10 +23,10 @@ Say our library 'mylib.rb' consists of the class X:
 
 The simplest test case would be written as follows:
 
-  Covers 'mylib'
+  covers 'mylib'
 
-  TestCase X do
-    Unit :a => "method #a does something expected" do
+  testcase X do
+    unit :a => "method #a does something expected" do
       x = X.new
       x.a.assert.is_a? String
     end
@@ -34,29 +34,25 @@ The simplest test case would be written as follows:
 
 The +Covers+ method works just like +require+ with the exception that Lemon records the file for refernce --under certain scenarios it can be used to improve overall test covered.
 
-As tests grow, we might need to organize them into special concerns. For this Lemon provides a generic #Concern method and two special concern methods, #Instance and #Singleton. The difference between them is the object of concern each addresses. The concern methods also provide the setup/before procedures common to other test frameworks. The most useful of the methods is #Instance, which is used to setup an instance of the testcase's target class.
+As tests grow, we might need to organize them into special concerns. For this Lemon provides a #concern method and a #setup method. Technically the two methods are the same, but #concern is used more for descriptive purposes whereas #setup is used to create an instance of the testcase's target class.
 
-  Covers 'mylib'
+  covers 'mylib'
 
-  TestCase X do
-    Instance "Description of a concern that the following unit tests address." do
+  testcase X do
+    setup "Description of a concern that the following unit tests address." do
       X.new
     end
 
-    Unit :a => "method #a does something expected" do |x|
+    unit :a => "method #a does something expected" do |x|
       x.a.assert.is_a? String
     end
   end
 
-Notice that the parameter passed to the block of +Unit+ methdod is the instance of +X+ created in the Instance block. This block is run for every subsequent +Unit+ untill a new concern is defined.
+Notice that the parameter passed to the block of +unit+ methdod is the instance of +X+ created in the +setup+ block. This block is run for every subsequent +Unit+ untill a new concern is defined.
 
-The +Singleton+ method is just like Instance except it's block must return the target class (or module) itself. If not block is given the block parameter will automactially be the target. Another impotant effect of Singleton is that all subsequent +Unit+ calls are treated as MetaUnit calls unit the new concern is defined.
+In conjunction with the #setup methods, there is a #teardown method which can be used "tidy-up" after each unit run if need be.
 
-The generic #Concern method is used when the focues of the unit tests is more indirect, and an +Instance+ or +Singleton+ concern won;t suffice but a setup procedure is still required.
-
-In conjunction with the conern methods, there is a +Teardown+ method which can be used "tidy-up" after each unit run if need be.
-
-Lastly, there are the +Prepare+ and +Cleanup+ methods which can be used only once for each testcase. Teh +Prepare+ method defines a procedure to run before any of the testcase's units are run, and the +Cleanup+ method defines a procedure to run after that are all finished.
+Lastly, there are the +before+ and +after+ methods which can be used only once for each testcase. The +before+ method defines a procedure to run before any of the testcase's units are run, and the +after+ method defines a procedure to run after that are all finished.
 
 That is the bulk of the matter forf writing Lemon tests. There are few other features not mentions here. You can learn more about hose by reading the wiki[http://wiki.github.com/proutils/lemon].
 
@@ -102,4 +98,3 @@ There is no special directory for Lemon tests. Since they are unit tests, `test/
 Copyright (c) 2009 Thomas Sawyer
 
 See LICENSE file for details.
-
