Update README concerning lemonade cli. [doc]

--- a/README.rdoc
+++ b/README.rdoc
@@ -40,7 +40,7 @@ The simplest test case would be written as follows:
 
 The +Covers+ method works just like +require+ with the exception that Lemon records the file for reference --under certain scenarios it can be used to improve overall test covered.
 
-As tests grow, we might need to organize them into special concerns. For this Lemon provides a #concern method and a #setup method. Technically the two methods are the same, but #concern is used more for descriptive purposes whereas #setup is used to create an instance of the testcase's target class.
+As tests grow, we might need to organize them into special concerns. For this Lemon provides a #concern method and a #setup method. Technically the two methods are the same, but #concern is used more for descriptive purposes whereas #setup is used to create an instance of the test case's target class.
 
   Test.covers 'mylib'
 
@@ -60,18 +60,18 @@ Notice that the parameter passed to the block of +unit+ method is the instance o
 
 In conjunction with the #setup methods, there is a #teardown method which can be used "tidy-up" after each unit run if need be.
 
-Lastly, there are the +before+ and +after+ methods which can be used only once for each testcase. The +before+ method defines a procedure to run before any of the testcase's units are run, and the +after+ method defines a procedure to run after that are all finished.
+Lastly, there are the +before+ and +after+ methods which can be used only once for each test case. The +before+ method defines a procedure to run before any of the test case's units are run, and the +after+ method defines a procedure to run after that are all finished.
 
 That is the bulk of the matter for writing Lemon tests. There are few other features not mentions here. You can learn more about hose by reading the wiki[http://wiki.github.com/proutils/lemon].
 
 
 === Running Tests
 
-Tests' can be run using the `lemonade` command line tool.
+Tests can be run using the +lemonade+ command line tool.
 
   $ lemonade test test/cases/name_case.rb
 
-Lemon utilizes the Ruby Test system to run tests, the `lemonade test` command simply passes off the running of tests to `ruby-test`. So the +ruby-test+ command-line utility can also be used directly as well.
+Lemon utilizes the Ruby Test system to run tests, the `lemonade test` command simply passes off the running of tests to `ruby-test`. So the +ruby-test+ command-line utility can also be used directly:
 
   $ ruby-test -r lemon test/cases/name_case.rb
 
@@ -83,13 +83,15 @@ See {Ruby-Test}[http://rubyworks.github.com/test] for more information.
 
 === Checking Test Coverage
 
-Lemon can check test coverage by loading your target system and comparing it to your tests. To do this use the <code>lemon-cov</code> command the utility.
+Lemon can check test coverage by loading your target system and comparing it to your tests. To do this use the <code>lemonade coverage</code> command the utility.
 
   $ lemonade coverage -Ilib test/cases/*.rb
 
+The coverage tool provides class/module and method coverage and is meant to as a "guidance system" for developers working toward complete test coverage. It is not an lines-of-code coverage tool and should not be considered a substitute for one.
+
 === Generating Test Skeletons
 
-Because of the one to one correspondence of test case and unit test to class/module and method, Lemon can also generate test scaffolding for previously written code. To do this, use the <code>lemon-gen</code> command line utility and provide the lib location or files of the scripts for which to generate test scaffolding, and the output location for the test scripts.
+Because of the one to one correspondence of test case and unit test to class/module and method, Lemon can also generate test scaffolding for previously written code. To do this, use the <code>lemonade generate</code> command line utility and provide the lib location or files of the scripts for which to generate test scaffolding, and the output location for the test scripts.
 
   $ lemonade generate -Ilib test/cases/*.rb
 
@@ -97,7 +99,7 @@ Generating test case scaffolding from code will undoubtedly strike test-driven d
 
 === Test Directory
 
-There is no special directory for Lemon tests. Since they are unit tests, `test/` or `test/unit/` are good choices. Other options are `cases/` and `test/cases` since each file generally defines a single testcase.
+There is no special directory for Lemon tests. Since they are unit tests, `test/` or `test/unit/` are good choices. Other options are `cases/` and `test/cases` since each file generally defines a single test case.
 
 
 == COPYRIGHT
@@ -106,6 +108,6 @@ Lemon Unit Testing Framework
 
 Copyright (c) 2009 Thomas Sawyer 
 
-BSD 2 Clause License
+Lemon is distributed according to the terms of the *FreeBSD* License.
 
-See COPYING.rdoc for details.
+See the COPYING.rdoc file for details.
